--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ache o Pato</title>
-    <link rel="stylesheet" href="stiles.css">
+    <link rel="stylesheet" href="stile.css">
 </head>
 <body>
     <h1>Ache o Pato! 🦆</h1>
